kubernetes/image-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: image-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: image-service
  template:
    metadata:
      labels:
        app: image-service
    spec:
      containers:
      - name: image-service
        image: 'dmarby/picsum-photos@sha256:fb1d39712929dce4ee98176b0f88c1f90cdd69021cf13758af92ebd223f1baf7'
        command: ['./image-service']
        ports:
        - containerPort: 8081
        resources:
          requests:
            cpu: 2
          limits:
            memory: 512Mi
            cpu: 3
        livenessProbe:
          httpGet:
            path: /health
            port: 8081
          initialDelaySeconds: 30
          timeoutSeconds: 10
          periodSeconds: 10
          failureThreshold: 6
        readinessProbe:
          httpGet:
            path: /health
            port: 8081
          initialDelaySeconds: 30
          timeoutSeconds: 10
          periodSeconds: 10
      affinity: # Only one pod per node
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: "app"
                    operator: In
                    values:
                    - image-service
              topologyKey: "kubernetes.io/hostname"
---
apiVersion: v1
kind: Service
metadata:
  name: image-service
spec:
  clusterIP: None
  selector:
    app: image-service
  ports:
  - port: 8081
    name: image-service
