kubernetes/picsum.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: picsum
spec:
  replicas: 2
  selector:
    matchLabels:
      app: picsum
  template:
    metadata:
      labels:
        app: picsum
    spec:
      containers:
      - name: picsum
        image: 'dmarby/picsum-photos@sha256:9c82481e20a4021b432b97dea6a5eeda18791249fed73d1938611515ab062126'
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 30
          timeoutSeconds: 10
          periodSeconds: 10
          failureThreshold: 6
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 30
          timeoutSeconds: 10
          periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: picsum-svc
spec:
  clusterIP: None
  selector:
    app: picsum
  ports:
  - port: 8080
    name: picsum
