kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: picsum-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
      - picsum.photos
      - i.picsum.photos
      secretName: picsum-cert
  rules:
  - host: picsum.photos
    http:
      paths:
      - backend:
          service:
            name: picsum-svc
            port:
              number: 8080
        pathType: ImplementationSpecific
  - host: i.picsum.photos
    http:
      paths:
      - backend:
          service:
            name: image-service
            port:
              number: 8081
        pathType: ImplementationSpecific
